artifacts/rumono/ryu/fuzz_target/build.log
warning: virtual workspace defaulting to `resolver = "1"` despite one or more workspace members being on edition 2021 which implies `resolver = "2"`
note: to keep the current resolver, specify `workspace.resolver = "1"` in the workspace root's manifest
note: to use the edition 2021 resolver, specify `workspace.resolver = "2"` in the workspace root's manifest
note: for more details see https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
   Compiling semver v1.0.26
   Compiling home v0.5.11
   Compiling libc v0.2.172
   Compiling serde v1.0.219
   Compiling ryu v1.0.20 (/home/rumono/ryu)
   Compiling xdg v2.5.2
   Compiling afl v0.15.18
   Compiling rustc_version v0.4.1
   Compiling replay_ryu3 v0.1.0 (/home/rumono/ryu/fuzz_target/build/replay_ryu3)
   Compiling replay_ryu4 v0.1.0 (/home/rumono/ryu/fuzz_target/build/replay_ryu4)
   Compiling test_ryu2 v0.1.0 (/home/rumono/ryu/fuzz_target/build/test_ryu2)
   Compiling test_ryu5 v0.1.0 (/home/rumono/ryu/fuzz_target/build/test_ryu5)
   Compiling test_ryu1 v0.1.0 (/home/rumono/ryu/fuzz_target/build/test_ryu1)
   Compiling test_ryu4 v0.1.0 (/home/rumono/ryu/fuzz_target/build/test_ryu4)
   Compiling replay_ryu5 v0.1.0 (/home/rumono/ryu/fuzz_target/build/replay_ryu5)
   Compiling test_ryu3 v0.1.0 (/home/rumono/ryu/fuzz_target/build/test_ryu3)
   Compiling test_ryu0 v0.1.0 (/home/rumono/ryu/fuzz_target/build/test_ryu0)
   Compiling replay_ryu1 v0.1.0 (/home/rumono/ryu/fuzz_target/build/replay_ryu1)
   Compiling replay_ryu2 v0.1.0 (/home/rumono/ryu/fuzz_target/build/replay_ryu2)
   Compiling replay_ryu0 v0.1.0 (/home/rumono/ryu/fuzz_target/build/replay_ryu0)
warning: the feature `int_log` has been stable since 1.67.0 and no longer requires an attribute to enable
 --> test_ryu3/src/main.rs:1:12
  |
1 | #![feature(int_log)]
  |            ^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

warning: unused `#[macro_use]` import
 --> replay_ryu4/src/main.rs:4:1
  |
4 | #[macro_use]
  | ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: the feature `int_log` has been stable since 1.67.0 and no longer requires an attribute to enable
 --> test_ryu1/src/main.rs:1:12
  |
1 | #![feature(int_log)]
  |            ^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

warning: the feature `int_log` has been stable since 1.67.0 and no longer requires an attribute to enable
 --> test_ryu5/src/main.rs:1:12
  |
1 | #![feature(int_log)]
  |            ^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

warning: unused `#[macro_use]` import
 --> replay_ryu0/src/main.rs:4:1
  |
4 | #[macro_use]
  | ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: the feature `int_log` has been stable since 1.67.0 and no longer requires an attribute to enable
 --> replay_ryu0/src/main.rs:1:12
  |
1 | #![feature(int_log)]
  |            ^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

warning: the feature `int_log` has been stable since 1.67.0 and no longer requires an attribute to enable
 --> test_ryu0/src/main.rs:1:12
  |
1 | #![feature(int_log)]
  |            ^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

warning: the feature `int_log` has been stable since 1.67.0 and no longer requires an attribute to enable
 --> test_ryu2/src/main.rs:1:12
  |
1 | #![feature(int_log)]
  |            ^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

warning: unused `#[macro_use]` import
 --> replay_ryu3/src/main.rs:4:1
  |
4 | #[macro_use]
  | ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused `#[macro_use]` import
 --> replay_ryu5/src/main.rs:4:1
  |
4 | #[macro_use]
  | ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: the feature `int_log` has been stable since 1.67.0 and no longer requires an attribute to enable
 --> replay_ryu3/src/main.rs:1:12
  |
1 | #![feature(int_log)]
  |            ^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

warning: unused `#[macro_use]` import
 --> replay_ryu1/src/main.rs:4:1
  |
4 | #[macro_use]
  | ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: the feature `int_log` has been stable since 1.67.0 and no longer requires an attribute to enable
 --> replay_ryu4/src/main.rs:1:12
  |
1 | #![feature(int_log)]
  |            ^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

warning: unused `#[macro_use]` import
 --> replay_ryu2/src/main.rs:4:1
  |
4 | #[macro_use]
  | ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: the feature `int_log` has been stable since 1.67.0 and no longer requires an attribute to enable
 --> test_ryu4/src/main.rs:1:12
  |
1 | #![feature(int_log)]
  |            ^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

warning: the feature `int_log` has been stable since 1.67.0 and no longer requires an attribute to enable
 --> replay_ryu5/src/main.rs:1:12
  |
1 | #![feature(int_log)]
  |            ^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

warning: the feature `int_log` has been stable since 1.67.0 and no longer requires an attribute to enable
 --> replay_ryu1/src/main.rs:1:12
  |
1 | #![feature(int_log)]
  |            ^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

error[E0606]: casting `&u8` as `*mut u8` is invalid
  --> test_ryu5/src/main.rs:19:38
   |
19 |         let _local0_param1_helper1 = &(_param1) as *mut u8;
   |                                      ^^^^^^^^^^^^^^^^^^^^^

error[E0606]: casting `&u8` as `*mut u8` is invalid
  --> replay_ryu4/src/main.rs:19:38
   |
19 |         let _local0_param1_helper1 = &(_param1) as *mut u8;
   |                                      ^^^^^^^^^^^^^^^^^^^^^

warning: the feature `int_log` has been stable since 1.67.0 and no longer requires an attribute to enable
 --> replay_ryu2/src/main.rs:1:12
  |
1 | #![feature(int_log)]
  |            ^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

error[E0606]: casting `&u8` as `*mut u8` is invalid
  --> replay_ryu5/src/main.rs:19:38
   |
19 |         let _local0_param1_helper1 = &(_param1) as *mut u8;
   |                                      ^^^^^^^^^^^^^^^^^^^^^

error[E0606]: casting `&u8` as `*mut u8` is invalid
  --> test_ryu4/src/main.rs:19:38
   |
19 |         let _local0_param1_helper1 = &(_param1) as *mut u8;
   |                                      ^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0606`.
warning: `replay_ryu4` (bin "replay_ryu4") generated 2 warnings
error: could not compile `replay_ryu4` (bin "replay_ryu4") due to 1 previous error; 2 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `test_ryu5` (bin "test_ryu5") generated 1 warning
error: could not compile `test_ryu5` (bin "test_ryu5") due to 1 previous error; 1 warning emitted
warning: `test_ryu4` (bin "test_ryu4") generated 1 warning
error: could not compile `test_ryu4` (bin "test_ryu4") due to 1 previous error; 1 warning emitted
warning: `replay_ryu5` (bin "replay_ryu5") generated 2 warnings
error: could not compile `replay_ryu5` (bin "replay_ryu5") due to 1 previous error; 2 warnings emitted
warning: `test_ryu0` (bin "test_ryu0") generated 1 warning
warning: `test_ryu2` (bin "test_ryu2") generated 1 warning
warning: `test_ryu1` (bin "test_ryu1") generated 1 warning
warning: `replay_ryu1` (bin "replay_ryu1") generated 2 warnings
warning: `replay_ryu0` (bin "replay_ryu0") generated 2 warnings
warning: `test_ryu3` (bin "test_ryu3") generated 1 warning
warning: `replay_ryu2` (bin "replay_ryu2") generated 2 warnings
warning: `replay_ryu3` (bin "replay_ryu3") generated 2 warnings
